# solar

./: CMakeLists.txt  index.html  solar.data  solar.js  solar.wasm  solar.worker.js
.devcontainer/: Dockerfile  devcontainer.json
css/: style.css
shaders/: circle.frag  circle.vert
src/: bcontroller.cpp  game.cpp  globals.cpp  particle.cpp  partsys.cpp  shader.cpp  solar.cpp
src/include/: bcontroller.hpp  game.hpp  gl.hpp  globals.hpp  nbody.hpp  particle.hpp  partsys.hpp  sceneobj.hpp  shader.hpp  swarm.hpp
